# FiltreMusical

./: README.md
KFR/: README.md
KFR/dspplot/dspplot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
KFR/include/kfr/: all.hpp
Music/: Music.pro  Music.pro.user.e1faf0d  Resources.qrc  TextEditor.pro.user.2.7pre1  main.cpp  music.cpp  music.h  music.ui  playaudio.cpp  playaudio.h
Music/lib/arm/: libfmod.so.9
Music/lib/armhf/: libfmodL.so.9.4
Music/lib/x86/: libfmod.so.9
aquila_test/aquila-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  uninstall.cmake
aquila_test/aquila-build/examples/: Makefile  cmake_install.cmake
aquila_test/aquila-build/examples/am_modulation/: Makefile  am_modulation  cmake_install.cmake
aquila_test/aquila-build/examples/dtw_path_recovery/: Makefile  cmake_install.cmake  dtw_path_recovery
aquila_test/aquila-build/examples/fft_comparison/: Makefile  cmake_install.cmake  (+1 more)
aquila_test/aquila-build/lib/: Makefile  cmake_install.cmake
aquila_test/aquila-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  constants.h
aquila_test/wave_info/: wave_info.cpp
build-Music-Desktop_Qt_5_9_0_GCC_64bit-Debug/: Makefile  Music  moc_music.cpp  ui_music.h
build-Music-Desktop_Qt_5_9_0_GCC_64bit-Release/: Makefile  Music  moc_music.cpp  qrc_Resources.cpp  ui_music.h
fmod_test_lecture_effet/: CMakeLists.txt  README.md  main.cpp
fmod_test_lecture_effet/media/: Readme.md
fmod_test_lecture_simple/: CMakeLists.txt  README.md  main.cpp
fmod_test_lecture_simple/media/: Readme.md
(+49 files in other folders)
